<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SYNEhire</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_text_login">Login</string>
    <string name="error_username">Enter valid username</string>
    <string name="error_password">Enter valid password</string>
    <string name="activity_title_candidate_details">Set-Up Interview</string>
    <string name="activity_title_choose_topics">Choose Area of Discussion</string>
    <string name="hint_main_topic">Topics</string>
    <string name="hint_sub_topic">Sub Topics</string>
    <string name="button_text_start_interview">Start Interview</string>
    <string name="button_text_continue">Save &amp; Next</string>
    <string name="button_text_continue_for_topics">Save &amp; Next</string>
    <string name="button_text_finish">End Discussion</string>
    <string name="activity_title_discussion">Discussion Details</string>
    <string name="text_outcome_comment">Outcomes:</string>
    <string name="hint_outcome_comment">Outcomes</string>
    <string name="hint_comment">Comment</string>
    <string name="button_outcome_comment">Feedback</string>
    <string name="text_mode_of_discussion">Type of Discussion:</string>
    <string name="hint_recruiter_name">Recruiter Name</string>
    <string name="hint_interview_level_name">Interview Level</string>
    <string name="hint_interview_mode_name">Interview Mode</string>
    <string name="hint_candidate_name">Candidate Name</string>
    <string name="interview_date">Interview Date(MM/DD/YYYY)</string>
    <string name="hint_candidate_email">Candidate Email</string>
    <string name="hint_technology_name">Technology</string>
    <string name="button_text_submit">Start</string>
    <string name="error_technology">Enter valid Technology</string>
    <string name="error_panel_name">Enter valid Panelist Name</string>
    <string name="error_recruiter_name">Enter valid Recruiter Name</string>
    <string name="error_interview_level">Enter valid Interview Level</string>
    <string name="error_interview_mode">Enter valid Interview Mode</string>
    <string name="error_candidate_name">Enter valid Candidate Name</string>
    <string name="error_candidate_email">Enter valid Candidate Email</string>
    <string name="error_candidate_primary_contact">Enter valid Mobile Number</string>
    <string name="error_enter_ta">Enter Technology Area</string>
    <string name="error_enter_ct">Enter Concept Tested</string>
    <string name="error_message">Something went wrong. Please try again.</string>
    <string name="error_enter_comments">Enter your Outcome/Comments</string>
    <string name="error_enter_recommendation_comments">Enter your recommendation comments</string>
    <string name="error_select_mode_of_discussion">Please select atleast one Mode of Discussion</string>
    <string name="submit_assessment">Submit Assesment</string>
    <string name="activity_summary_title">Discussion Summary</string>
    <string name="activity_recruiter_title">Recruiter</string>
    <string name="panelist_welcome_text">Please enter following details to set-up the interview</string>
    <string name="recruiter_welcome_text">Please enter candidate email IDs to obtain feedback (You may enter multiple candidate and recipient IDs)</string>
    <string name="button_text_send_email">Email Feedback</string>
    <string name="hint_recipients_email">Recipient Email</string>
    <string name="activity_recommendation_title">Recommendation</string>
    <string name="hint_email">Email</string>
    <string name="button_setup_another_interview">Set-Up Another Interview</string>
    <string name="error_recipient_email">Enter valid Recipient Email</string>
    <string name="interview_feedback_success_msg">Interview feedback has been successfully submitted</string>
    <string name="interview_report_success_msg">Report has been successfully sent</string>


</resources>
