<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:id="@+id/topics_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/app_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutMainTopic"
            style="@style/MyTextInputLayout"
            android:imeOptions="actionNext"
            >

            <AutoCompleteTextView
                android:id="@+id/autoTextMainTopic"
                android:hint="@string/hint_main_topic"
                style="@style/MyEditTextTheme"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutSubTopic"
            style="@style/MyTextInputLayout"
            android:layout_marginTop="@dimen/app_margin_top">

            <AutoCompleteTextView
                android:id="@+id/autoTextSubTopic"
                android:hint="@string/hint_sub_topic"
                style="@style/MyEditTextTheme"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/start_button"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:background="@drawable/login_button_selector"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_text_start_interview"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/app_margin"
        android:textColor="@color/color_black"
        android:textSize="@dimen/login_button_text_size" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>