<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/app_margin">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/color_text_gray"
            android:text="@string/recruiter_welcome_text"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/app_margin_top">
            <Button
                android:id="@+id/buttonSendEmail"
                android:layout_width="@dimen/login_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin"
                android:background="@drawable/login_button_selector"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_text_send_email"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:textColor="@color/color_black"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/app_margin_top"
                android:textSize="@dimen/login_button_text_size" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_above="@id/buttonSendEmail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight=".5">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutCandidateEmails"
                        style="@style/MyTextInputLayout">
                        <AutoCompleteTextView
                            android:id="@+id/autoTextEmail"
                            android:hint="@string/hint_candidate_email"
                            style="@style/MyEditTextTheme"
                            android:focusableInTouchMode="true"
                            android:focusable="true"
                            android:drawableEnd="@drawable/icon_search"
                            android:imeOptions="actionDone"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRecipientEmail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutRecipientEmails"
                        style="@style/MyTextInputLayout">
                        <EditText
                            android:id="@+id/editTextRecipientEmail"
                            style="@style/MyEditTextTheme"
                            android:hint="@string/hint_recipients_email"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionDone"
                            android:focusable="true"
                            android:focusableInTouchMode="true"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_recipient_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"/>
</RelativeLayout>